--- a/lesson9/hw2/index.html
+++ b/lesson9/hw2/index.html
@@ -8,6 +8,11 @@
         integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
         <style>
 
+            * {
+                margin: 0;
+                padding: 0;
+            }
+
             .header {
                 background-color: darkturquoise;
                 height: 40px;
@@ -15,14 +20,17 @@
 
             .nvigations {
                 height: 40px;
+                clear: both;
+                line-height: 0.45;
             }
 
             ul li {
                 float: left;
                 margin-left: 16px;
                 color: white;
-                line-height: 225%;
                 list-style-type: none;
+                margin-top: 11px;
+                margin-bottom: 11px;
             }
 
             .content {
@@ -67,12 +75,12 @@
 
             .eye_left {
                 left: 40px;
-                bottom: 60px;
+                bottom: 70px;
             }
 
             .eye_right {
                 left: 130px;
-                bottom: 30px;
+                bottom: 40px;
             }
         </style>
 </head>
