--- a/lesson9/hw2/index.html
+++ b/lesson9/hw2/index.html
@@ -21,7 +21,6 @@
             .nvigations {
                 height: 40px;
                 clear: both;
-                line-height: 0.45;
             }
 
             ul li {
@@ -29,8 +28,7 @@
                 margin-left: 16px;
                 color: white;
                 list-style-type: none;
-                margin-top: 11px;
-                margin-bottom: 11px;
+                line-height: 40px;
             }
 
             .content {
