--- a/lesson9/hw2/index.html
+++ b/lesson9/hw2/index.html
@@ -15,6 +15,7 @@
             .header {
                 background-color: darkturquoise;
                 height: 40px;
+                position: relative;
             }
 
             .nvigations {
