--- a/Lesson10/task3/index.html
+++ b/Lesson10/task3/index.html
@@ -12,6 +12,7 @@
 
         .navigation {
             margin: 0;
+            padding: 0;
             display: flex;
             list-style-type: none;
         }
@@ -30,7 +31,7 @@
         }
 
         .navigation_item {
-            margin-right: 10px;
+            padding-left: 16px;
         }
 
         .footer_text {
@@ -63,6 +64,8 @@
         }
 
         .news-1 {
+            display: flex;
+            justify-content: center;
             margin-left: 16px;
             margin-right: 16px;
         }
