--- a/Lesson10/task3/index.html
+++ b/Lesson10/task3/index.html
@@ -60,6 +60,7 @@
         .news {
             width: 200px;
             background-color: grey;
+            line-height: 40px;
         }
 
         .news-1 {
