--- a/Lesson10/task3/index.html
+++ b/Lesson10/task3/index.html
@@ -60,14 +60,13 @@
         .news {
             width: 200px;
             background-color: grey;
-            line-height: 40px;
         }
 
         .news-1 {
             display: flex;
             justify-content: center;
-            margin-left: 16px;
-            margin-right: 16px;
+            margin-top: 16px;
+            margin-bottom: 16px;
         }
 
         .news-2 {
