--- a/lesson11/hw1/index.html
+++ b/lesson11/hw1/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="text">Hover over me
+    <div class="text"><span class="text-1" style="border-bottom:  1px dotted black;">Hover over me</span>
         <span class="tooltip">I'm a tooltip</span>
     </div>
 </body>
