--- a/lesson12/task4/index.html
+++ b/lesson12/task4/index.html
@@ -12,8 +12,9 @@
 </head>
 
 <body>
-    <pre>&lt;!DOCTYPE html&gt;
-        &lt;html lang=&quot;en&quot;&gt;
+    <pre>
+        &lt;!DOCTYPE html&gt;
+         &lt;html lang=&quot;en&quot;&gt;
         
         &lt;head&gt;
             &lt;meta charset=&quot;UTF-8&quot;&gt;
@@ -29,7 +30,8 @@
             &lt;div&gt;Text&lt;/div&gt;
         &lt;/body&gt;
         
-        &lt;/html&gt;</pre>
+        &lt;/html&gt;
+    </pre>
 </body>
 
 </html>
