--- a/lesson13/task1/index.html
+++ b/lesson13/task1/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="mountains"><span>Mountains</span></div>
+    <div class="mountains"><span class="text">Mountains</span></div>
 </body>
 </html>
