--- a/lesson15/task1/index.html
+++ b/lesson15/task1/index.html
@@ -18,13 +18,13 @@
         </figure>
         <figure class="card">
                 <img class="blur-filter" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg" alt="Blur filter" srcset="">
-            <figcaption class="caption-2">
+            <figcaption class="caption">
                 Blur
             </figcaption>
         </figure>
         <figure class="card">
                 <img class="invert-filter" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg" alt="Invert filter" srcset="">
-            <figcaption class="caption-3">
+            <figcaption class="caption">
                 Invert
             </figcaption>
         </figure>
