--- a/lesson15/task1/index.html
+++ b/lesson15/task1/index.html
@@ -8,26 +8,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="img-container"><img class="main-image" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/big.jpeg" alt="Land with Tree" srcset=""></div>
-    <div class="gallery">
-        <figure class="card">
-                <img class="opacity-filter" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg" alt="Opacity filter" srcset="">
-            <figcaption class="caption">
-                Opacity
-            </figcaption>
-        </figure>
-        <figure class="card">
-                <img class="blur-filter" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg" alt="Blur filter" srcset="">
-            <figcaption class="caption">
-                Blur
-            </figcaption>
-        </figure>
-        <figure class="card">
-                <img class="invert-filter" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg" alt="Invert filter" srcset="">
-            <figcaption class="caption">
-                Invert
-            </figcaption>
-        </figure>
-    </div>
+        <div class="image-container"><img class="image" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/big.jpeg" alt="big.jpeg"></div>
+        <div class="gallery">
+            <figure class="card">
+                <img class="opacity" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg" alt="">
+                <figcaption class="caption">Opacity</figcaption>
+            </figure>
+            <figure class="card">
+                <img class="blur" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg" alt="">
+                <figcaption class="caption">Blur</figcaption>
+            </figure>
+            <figure class="card">
+                <img class="invert" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg" alt="">
+                <figcaption class="caption">Invert</figcaption>
+            </figure>
+        </div>
 </body>
 </html>
