--- a/lesson16/task1/index.html
+++ b/lesson16/task1/index.html
@@ -13,12 +13,19 @@
     </div>
       <div class="input"><input type="number" name="age" value="17">
     </div>
-      <div class="input"><input type="checkbox" name="agree" name="agree">
+      <div class="input">
+        <label>
+            <input type="checkbox" id="checkbox" name="agree" name="agree">
+            Accept terms and conditions
+        <label></label>
     </div>
     <div class="choose-gender">
-        <input type="radio" name="gender">Male
-        <input type="radio" name="gender">Female
-        <input type="radio" name="gender">Secret
+        <input type="radio" id="gender-male" name="gender" checked>
+            <label for="gender-male">Male</label>
+        <input type="radio" id="gender-female" name="gender">
+            <label for="gender-female">Female</label>
+        <input type="radio" id="secret-secret" name="gender">
+            <label for="secret-secret">Secret</label>
     </div>
     <div class="input"
     ><textarea name ="description" placeholder="Write description..."></textarea>
