--- a/lesson16/task1/index.html
+++ b/lesson16/task1/index.html
@@ -5,24 +5,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>From</title>
+    <title>Form</title>
 </head>
 <body>
   <form>
-      <div class="input"><input type="text" name="lastName" value="Emerson">
-    </div>
-      <div class="input"><input type="number" name="age" value="17">
-    </div>
+      <div class="input"><input type="text" name="lastName" value="Emerson"></div>
+      <div class="input"><input type="number" name="age" value="17"></div>
       <div class="input">
             <input type="checkbox" name="agree" name="agree">Accept terms and conditions
-    </div>
+      </div>
     <div class="choose-gender">
         <input type="radio" name="gender" checked>Male
         <input type="radio" name="gender">Female
         <input type="radio" name="gender">Secret
     </div>
-    <div class="input"
-    ><textarea name ="description" placeholder="Write description..."></textarea>
+    <div class="input">
+        <textarea name ="description" placeholder="Write description..."></textarea>
     </div>
     <div class="input">
         <button type="submit">Submit</button>
