--- a/lesson16/task2/index.html
+++ b/lesson16/task2/index.html
@@ -10,15 +10,13 @@
 <body>
   <form>
       <div class="input">
-          <label>
+          <label>Last Name
               <input type="text" name="lastName" value="Emerson" readonly>
-              Last Name
           </label>
      </div>
       <div class="input">
-          <label>
+          <label>Age
               <input type="number" name="age" value="17" min="3" max="10">
-              Age
           </label>
         </div>
       <div class="input">
