--- a/lesson16/hw2/index.html
+++ b/lesson16/hw2/index.html
@@ -23,14 +23,14 @@
             <div><textarea name="story" cols="30" rows="5" maxlength="30">A long time ago...</textarea>></div>
             <div><input type="password" name="password" value="secret"></div>
             <div class="languages">
-                <div><input type="radio" name="language" value="html">HTML</div>
-                <div><input type="radio" name="language" value="css" checked>CSS</div>
-                <div><input type="radio" name="language" value="javascript">JavaScript</div>
+                <input type="radio" name="language" value="html">HTML
+                <input type="radio" name="language" value="css" checked>CSS
+              <input type="radio" name="language" value="javascript">JavaScript
             </div>
                 <div><input type="range" name="learningProgress" value="30"></div>
                 <div><select name="framework">
                     <option value="react">React</option>
-                    <option value="jquery">JQuery</option>
+                    <option value="jquery" selected>JQuery</option>
                     <option value="bootstrap">Bootstrap</option>
                 </select></div>
                 <div><input type="search" name="search" placeholder="Type first letters..."></div>
