--- a/lesson16/hw2/index.html
+++ b/lesson16/hw2/index.html
@@ -30,7 +30,7 @@
                 <div><input type="range" name="learningProgress" value="30"></div>
                 <div><select name="framework">
                     <option value="react">React</option>
-                    <option value="jquery" selected>JQuery</option>
+                    <option value="jquery" selected>jQuery</option>
                     <option value="bootstrap">Bootstrap</option>
                 </select></div>
                 <div><input type="search" name="search" placeholder="Type first letters..."></div>
@@ -38,7 +38,6 @@
                 <div><input type="url" name="website" placeholder="https://website.com" required></div>
                </div><div><input type="week" name="birthWeek" value="2021-W51"></div>
                 <div><button type="submit">Save</button></div>
-            </div>
         </form>
     </main>
 </body>
