--- a/lesson16/hw2/index.html
+++ b/lesson16/hw2/index.html
@@ -20,7 +20,7 @@
             <div><input type="file" name="avatar"></div>
             <div><input type="month" name="startLearning" value="2020-01"></div>
             <div><input type="number" name="favouriteNumber" value="17"></div>
-            <div><textarea name="story" cols="30" rows="5" maxlength="30">A long time ago...</textarea>></div>
+            <div><textarea name="story" cols="30" rows="5" maxlength="30">A long time ago...</textarea></div>
             <div><input type="password" name="password" value="secret"></div>
             <div class="languages">
                 <input type="radio" name="language" value="html">HTML
