--- a/lesson16/hw2/index.html
+++ b/lesson16/hw2/index.html
@@ -36,8 +36,9 @@
                 <div><input type="search" name="search" placeholder="Type first letters..."></div>
                 <div><input type="time" name="lunchEnd" value="14:01"></div>
                 <div><input type="url" name="website" placeholder="https://website.com" required></div>
-               </div><div><input type="week" name="birthWeek" value="2021-W51"></div>
+               <div><input type="week" name="birthWeek" value="2021-W51"></div>
                 <div><button type="submit">Save</button></div>
+                </div>
         </form>
     </main>
 </body>
