--- a/lesson16/hw1/index.html
+++ b/lesson16/hw1/index.html
@@ -12,7 +12,7 @@
 <body>
     <main class="page">
         <form class="login-form">
-            <h1 class="form-title">Login</h1>
+            <div class="flex"><h1 class="form-title">Login</h1></div>
             <div class="form-control">
                 <label class="form-label" for="email">Email</label>
                 <input class="form-input" type="email" id="email" name="email" placeholder="mail@example.com" required />
