--- a/lesson16/hw2/index.html
+++ b/lesson16/hw2/index.html
@@ -23,9 +23,15 @@
             <div><textarea name="story" cols="30" rows="5" maxlength="30">A long time ago...</textarea></div>
             <div><input type="password" name="password" value="secret"></div>
             <div class="languages">
-                <input type="radio" name="language" value="html">HTML
-                <input type="radio" name="language" value="css" checked>CSS
-              <input type="radio" name="language" value="javascript">JavaScript
+                <label>
+                    <input type="radio" name="language" value="html"> HTML
+                </label>
+                <label>
+                <input type="radio" name="language" value="css" checked> CSS
+                </label>
+                <label>
+              <input type="radio" name="language" value="javascript"> JavaScript
+            </label>
             </div>
                 <div><input type="range" name="learningProgress" value="30"></div>
                 <div><select name="framework">
