--- a/lesson18/task2/index.html
+++ b/lesson18/task2/index.html
@@ -30,9 +30,9 @@
 	z M445.731,203.01c6.12,0,11.112,4.919,11.112,11.038c0,6.119-4.994,11.111-11.112,11.111s-11.038-4.994-11.038-11.111
 	C434.693,207.929,439.613,203.01,445.731,203.01z"/>
 </svg>
-        Catch of the bird</button>
+        <b>Catch of the bird</b></button>
     <button>
         <solid class="fas fa-id-card"></solid>
-        Create account</button>
+        <b>Create account</b></button>
 </body>
 </html>
