--- a/lesson18/hw1/index.html
+++ b/lesson18/hw1/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HW1</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <i class="fas fa-battery-full"></i>
-    <i class="fas fa-battery-three-quarters"></i>
-    <i class="fas fa-battery-half"></i>
-    <i class="fas fa-battery-quarter"></i>
-    <i class="fas fa-battery-empty"></i>
+    <i class="fa fa-battery-full" aria-hidden="true"></i>
+    <i class="fa fa-battery-three-quarters" aria-hidden="true"></i>
+    <i class="fa fa-battery-half" aria-hidden="true"></i>
+    <i class="fa fa-battery-quarter" aria-hidden="true"></i>
+    <i class="fa fa-battery-empty" aria-hidden="true"></i>
 </body>
 </html>
