--- a/lesson19/hw2/index.html
+++ b/lesson19/hw2/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="block"><span class="text">Hello, animated world!</span></div>
+    <div class="block">Hello, animated world!</div>
 </body>
 
 </html>
