--- a/lesson19/hw2/index.html
+++ b/lesson19/hw2/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <div class="block">Hello, animated world!</div>
+    <div class="container">
+        <div class="block">Hello, animated world!</div>
+    </div>
 </body>
 
 </html>
