--- a/lesson22/task2/index.html
+++ b/lesson22/task2/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <main class="content"></main>
+    <main class="content">
         <section class="products">
             <div class="navigation"><span>Navigation</span></div>
             <div class="products-list"><span>Products List</span></div>
