--- a/lesson23/hw2/index.html
+++ b/lesson23/hw2/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hw2</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
 </head>
-<body>
-    <div class="container">
-        <div class="navigation"><span class="navigation_text">Navigation</span></div>
-        <div class="product-list"><span class="product_text">Product List</span></div>
-        <div class="news"><span class="news_text">News</span></div>
+
+<body class="page">
+    <div class="main">
+        <div class="main-block main-block__navigation"><span>Navigation</span></div>
+        <div class="main-block main-block__products"><span>Products List</span></div>
     </div>
+    <div class="main-block main-block__news"><span>News</span></div>
 </body>
+
 </html>
