--- a/lesson25/index.html
+++ b/lesson25/index.html
@@ -14,7 +14,7 @@
     <main class="price__tables">
         <section class="basic price-card">
             <h1 class="price-card__title">Basic
-                <span class="price-card-title__second">Website</span>
+                <span class="price-card__title-s">Website</span>
             </h1>
             <div class="price-card__price">99€</div>
             <p class="price-card__description">Simple website made in the world's most popular CMS system, Wordpress</p>
@@ -49,7 +49,7 @@
         <section class="business price-card">
             <div class="price-card__head">
                 <h1 class="price-card__title">Business
-                    <span class="price-card-title__second">Website</span>
+                    <span class="price-card__title-s">Website</span>
                 </h1>
                 <span class="price-card__title-badge">
                     <div class="price-card__title-badge__stripe">POPULAR</div>
@@ -87,7 +87,7 @@
         </section>
         <section class="webshop price-card">
             <h1 class="price-card__title">Webshop
-                <span class="price-card-title__second">Website</span>
+                <span class="price-card__title-s">Website</span>
             </h1>
             <div class="price-card__price">599€</div>
             <p class="price-card__description">Your very own webshop made the world's most popular CMS system, Wordpress</p>
